update build.sh